@startuml
title "Ports & Adapters – I/O Boundaries (Current)"

package Domain {
  interface IRng {
    +next_u32() : uint32_t
    +next_int(min_inclusive:int, max_inclusive:int) : int
  }

  class GameState
}

package Application {
  interface IRenderer {
    +draw(state: GameState) : void
  }
  interface IInput {
    +poll() : optional<InputCommand>
  }
  interface ISaveGameRepo {
    +save(state: GameState, path: string) : bool
    +load(state: GameState, path: string) : bool
  }

  class GameLoop
}

package Infrastructure {
  class ConsoleRenderer
  class KeyboardInput
  class FileSaveGameRepo
  class StdRng
  class Logger
}

ConsoleRenderer ..|> IRenderer
KeyboardInput ..|> IInput
FileSaveGameRepo ..|> ISaveGameRepo
StdRng ..|> IRng

GameLoop ..> IInput : uses
GameLoop ..> IRenderer : uses
@enduml
